<resources>
    <string name="app_name">CookingApp</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome to your personal cooking app! Do you already have an account?</string>
    <string name="registertext">Register here please, if you do not have an account!</string>
    <string name="enterregister">Please enter your Information here</string>
    <string name="registername">Full name</string>
    <string name="registeremail">Email</string>
    <string name="registerpassword">Enter password</string>


    <string name="login">Login</string>
    <string name="logintext">Login here please, if you do have an account!</string>

    <string name="welcomename">Welcome, would like to browse some recipes?</string>

    <string name="search">Search recipes</string>
    <string name="profile">My Profile</string>
    <string name="searchinput">Enter some keywords like chicken, beef and so on</string>

    <string name="backtobrowse">Go back to browse</string>
    <string name="browseinput">Your results for </string>
    <string name="home">Home</string>

    <string name="backtoresults">To results</string>
    <string name="cookedrecipe">I cooked this recipe!</string>



    <string name="rezeptname">Name of your recipes</string>
    <string name="zutaten">the needed ingredients</string>
    <string name="anleitung">The instructions</string>
    <string name="ownimage">Upload a picture for reference (URL only)</string>
    <string name="saverecipe">Save my recipe</string>

    <string name="logout">Logout</string>
    <string name="createrecipe">Create own recipe</string>
    <string name="myrecipes">My own recipes</string>

    <string name="welcomehome">Welcome fellow Cook!</string>

    <string name="norecipes">Sadly there are no recipes for your search.</string>

</resources>