<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rezeptname"
        android:padding="15dp"
        android:layout_marginBottom="16dp"
        android:id="@+id/inputTitle"/>

    <EditText
        android:id="@+id/inputIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputTitle"
        android:layout_marginBottom="20dp"
        android:gravity="top"
        android:hint="@string/zutaten"
        android:inputType="textMultiLine"
        android:padding="100dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/anleitung"
        android:padding="150dp"
        android:layout_below="@id/inputIngredients"
        android:layout_marginBottom="16dp"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:id="@+id/inputInstructions"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ownimage"
        android:padding="15dp"
        android:layout_below="@id/inputInstructions"
        android:layout_marginBottom="16dp"
        android:inputType="textUri"
        android:id="@+id/inputImageUrl"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saverecipe"
        android:layout_below="@id/inputImageUrl"
        android:layout_marginTop="30dp"
        android:id="@+id/saveRecipeBtn"/>

</RelativeLayout>