<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/inputemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:hint="@string/registeremail"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/inputpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputemail"
        android:layout_marginTop="48dp"
        android:hint="@string/registerpassword"
        android:inputType="textPassword"
        android:autofillHints="password"/>

    <Button
        android:id="@+id/buttonlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputpassword"
        android:layout_marginTop="48dp"
        android:text="@string/login" />

</RelativeLayout>