<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <!-- Navi-->
    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginBottom="8dp">

            <Button android:id="@+id/backtohome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home" />

            <Button android:id="@+id/backtoprofile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile" />

            <Button
                android:id="@+id/backtoresults"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/backtobrowse" />
        </LinearLayout>





        <ImageView
            android:id="@+id/recipeimg"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp"
            />


        <TextView
            android:id="@+id/recipetitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>


        <TextView
            android:id="@+id/ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:textSize="12sp" />


        <TextView
            android:id="@+id/instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>




   </LinearLayout>
</ScrollView>
